@@ -31,19 +31,28 @@
 					<img height="395" hspace="0" src="/images/Map.gif" width="472"
 						border="0" />
 				</td>
-				<td>
+				<td class="side">
+				<H2>Tutorial Videos (Best viewed full screen in HD)</H2>
+				<p><H3>Register and Play</H3>
 					<iframe width="560" height="315"
 						src="http://www.youtube.com/embed/1PHCwRbxS20" frameborder="0"
 						allowfullscreen></iframe>
+						</p>
+				<p><H3>Login</H3>
 					<iframe width="560" height="315"
 						src="http://www.youtube.com/embed/BXkNf3LN0HI" frameborder="0"
 						allowfullscreen></iframe>
+						</p>
+				<p><H3>First Moves</H3>
 					<iframe width="560" height="315"
 						src="http://www.youtube.com/embed/6yfDsiHmPPM" frameborder="0"
 						allowfullscreen></iframe>
+						</p>
+				<p><H3>Complete Tour of the Interface</H3>
 					<iframe width="560" height="315"
 						src="http://www.youtube.com/embed/CZHippPDfCY" frameborder="0"
 						allowfullscreen></iframe>
+						</p>
 				</td>
 			</tr>
 		</table>
